fix overflow bug in courses.html

--- a/css/app.css
+++ b/css/app.css
@@ -1664,6 +1664,9 @@ body {
     padding-top: 5px;
     padding-bottom: 15px;
 }
+.content-960.courses .courses-content {
+    overflow: visible;
+}
 /* courses.html */
 
 
